--- a/SlidingMenuExample/app/src/main/res/layout/fragment2.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment2.xml
@@ -56,7 +56,8 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_alignStart="@+id/textView1"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp" />
+        android:layout_marginLeft="20dp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
