--- a/SlidingMenuExample/app/src/main/res/layout/fragment3.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment3.xml
@@ -6,7 +6,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is fragment 3"
+        android:text="Statistics"
         android:textSize="30dp"
         android:layout_gravity="center"
         android:layout_margin="20dp"/>
