--- a/SlidingMenuExample/app/src/main/res/layout/fragment1.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment1.xml
@@ -11,6 +11,13 @@
         android:layout_gravity="center"
         android:layout_margin="20dp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textViewStep"
+        android:layout_gravity="center_horizontal" />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
