--- a/SlidingMenuExample/app/src/main/res/layout/activity_login.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bakgrund"
     tools:context="com.gnirt69.slidingmenuexample.LoginActivity">
 
     <!-- Login progress -->
@@ -18,6 +19,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:visibility="gone" />
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/imageView4" />
 
     <ScrollView
         android:id="@+id/login_form"
