--- a/SlidingMenuExample/app/src/main/res/layout/activity_login_activity_homemade.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/activity_login_activity_homemade.xml
@@ -7,7 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.gnirt69.slidingmenuexample.LoginActivityHomemade"
     android:background="@drawable/bakgrund">
 
     <Button
@@ -21,27 +20,9 @@
         android:textSize="20dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:layout_marginBottom="70dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignStart="@+id/editText2"
         android:singleLine="true"
-        android:maxLength="12"/>
-
-    <EditText
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText1"
-        android:hint="Användarnamn"
-        android:singleLine="true"
-        android:padding="10dp"
-        android:textSize="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_above="@+id/editText2"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentEnd="false"
-        android:layout_alignParentStart="false"
         android:maxLength="12"
+
         android:layout_alignParentLeft="false"
         android:layout_alignParentRight="false" />
 
@@ -60,14 +41,17 @@
         android:layout_alignStart="@+id/editText1"
         android:layout_marginBottom="30dp" />
 
+
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/imageView"
         android:src="@drawable/baraloggamartin"
-        android:layout_centerHorizontal="true"
         android:scaleType="fitXY"
-        android:layout_above="@+id/editText1" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp" />
+
 
     <Button
         android:layout_width="wrap_content"
@@ -79,8 +63,85 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:textSize="10dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/login"
-        android:layout_alignStart="@+id/login" />
+
+        android:textColor="#ffffff"
+        android:layout_below="@+id/login"
+        android:layout_alignLeft="@+id/imageView"
+        android:layout_alignStart="@+id/imageView"
+        android:layout_marginTop="20dp" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="30dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:id="@+id/imageView2"
+            android:layout_weight="0.3"
+            android:src="@drawable/social"
+            android:layout_gravity="left"
+            android:layout_marginRight="10dp" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText1"
+            android:hint="Username"
+            android:singleLine="true"
+            android:padding="10dp"
+            android:textSize="20dp"
+            android:maxLength="12"
+            android:layout_alignTop="@+id/linearLayout"
+            android:layout_toEndOf="@+id/login"
+            android:layout_toRightOf="@+id/login"
+            android:layout_weight="0.7" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="20dp"
+        android:id="@+id/linearLayout2">
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:id="@+id/imageView3"
+            android:layout_weight="0.3"
+            android:src="@drawable/security"
+            android:layout_gravity="left"
+            android:layout_marginRight="10dp" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText2"
+            android:hint="Password"
+            android:singleLine="true"
+            android:padding="10dp"
+            android:textSize="20dp"
+            android:maxLength="12"
+            android:layout_alignTop="@+id/linearLayout"
+            android:layout_toEndOf="@+id/login"
+            android:layout_toRightOf="@+id/login"
+            android:layout_weight="0.7" />
+    </LinearLayout>
+
 
 </RelativeLayout>
