--- a/SlidingMenuExample/app/src/main/res/layout/activity_login.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/activity_login.xml
@@ -46,8 +46,8 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginLeft="50dp"
                 android:layout_marginTop="15dp">
 
                 <ImageView
@@ -55,7 +55,7 @@
                     android:layout_height="32dp"
                     android:id="@+id/imageView5"
                     android:layout_weight="0.3"
-                    android:src="@drawable/social"/>
+                    android:src="@drawable/social2"/>
 
                 <AutoCompleteTextView
                     android:id="@+id/email"
@@ -65,8 +65,10 @@
                     android:inputType="textEmailAddress"
                     android:layout_weight="0.7"
                     android:maxLines="1"
+                    android:imeActionId="@+id/password"
                     android:singleLine="true"
-                    android:layout_marginLeft="15dp" />
+                    android:layout_marginLeft="15dp"
+                    android:textSize="17dp" />
 
             </LinearLayout>
 
@@ -74,15 +76,15 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp">
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp">
 
                 <ImageView
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:id="@+id/imageView6"
                     android:layout_weight="0.3"
-                    android:src="@drawable/security"/>
+                    android:src="@drawable/lock"/>
 
                 <EditText
                     android:id="@+id/password"
@@ -96,7 +98,8 @@
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:layout_marginLeft="15dp" />
+                    android:layout_marginLeft="15dp"
+                    android:textSize="17dp" />
 
             </LinearLayout>
 
