--- a/SlidingMenuExample/app/src/main/res/layout/activity_login.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/activity_login.xml
@@ -46,15 +46,17 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="50dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="15dp">
+                android:layout_marginRight="60dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="30dp">
 
                 <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:id="@+id/imageView5"
                     android:layout_weight="0.3"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical"
                     android:src="@drawable/social2"/>
 
                 <AutoCompleteTextView
@@ -68,7 +70,9 @@
                     android:imeActionId="@+id/password"
                     android:singleLine="true"
                     android:layout_marginLeft="15dp"
-                    android:textSize="17dp" />
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="20dp" />
 
             </LinearLayout>
 
@@ -76,14 +80,16 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp">
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp">
 
                 <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:id="@+id/imageView6"
                     android:layout_weight="0.3"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical"
                     android:src="@drawable/lock"/>
 
                 <EditText
@@ -92,6 +98,8 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
                     android:imeActionId="@+id/login"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical"
                     android:layout_weight="0.7"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
@@ -99,7 +107,7 @@
                     android:maxLines="1"
                     android:singleLine="true"
                     android:layout_marginLeft="15dp"
-                    android:textSize="17dp" />
+                    android:textSize="20dp" />
 
             </LinearLayout>
 
