--- a/SlidingMenuExample/app/src/main/res/layout/fragment4.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment4.xml
@@ -6,8 +6,37 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is fragment 4"
+        android:text="Settings"
         android:textSize="30dp"
         android:layout_gravity="center"
-        android:layout_margin="20dp"/>
+        android:layout_margin="20dp"
+        android:textColor="#ffffff" />
+
+    <Button
+        android:id="@+id/change_password"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="Change password"
+        android:textStyle="bold"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:background="@drawable/mybutton"
+        android:textColor="#157065"
+        android:textSize="20dp" />
+
+    <Button
+        android:id="@+id/delete_account"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="Delete account"
+        android:textStyle="bold"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:background="@drawable/mybutton"
+        android:textColor="#157065"
+        android:textSize="20dp" />
 </LinearLayout>
