--- a/SlidingMenuExample/app/src/main/res/layout/fragment5.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment5.xml
@@ -18,7 +18,8 @@
         android:text="About us"
         android:id="@+id/textView"
         android:layout_marginTop="30dp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,6 +29,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        android:textColor="#ffffff" />
 
 </LinearLayout>
