--- a/SlidingMenuExample/app/src/main/res/layout/fragment2.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment2.xml
@@ -1,122 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Dagens aktivitet"
-        android:id="@+id/textView1"
-        android:textSize="30dp"
-        android:fontFamily="sans-serif-thin"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="50dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_margin="10dp" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Timmars sömn"
-        android:id="@+id/textView"
-        android:textSize="25dp"
-        android:textColor="#ffffff"
-        android:layout_alignTop="@+id/numberPicker"
-        android:layout_alignLeft="@+id/switch1"
-        android:layout_alignStart="@+id/switch1"
-        android:layout_marginTop="66dp" />
-
-    <NumberPicker
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/numberPicker"
-        android:layout_below="@+id/textView1"
-        android:layout_alignRight="@+id/textView1"
-        android:layout_alignEnd="@+id/textView1" />
-
-    <Switch
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:id="@+id/switch1"
-        android:textOff="No"
-        android:textOn="Yes"
-        android:checked="false"
-        android:showText="true"
-        android:text="Tränade du igår?"
-        android:textSize="25dp"
-        android:layout_alignRight="@+id/numberPicker"
-        android:layout_alignEnd="@+id/numberPicker"
-        android:layout_below="@+id/numberPicker"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_alignStart="@+id/textView1"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
+        android:text="Statistics"
+        android:textSize="30dp"
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
         android:textColor="#ffffff" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hur mår du idag?"
-        android:id="@+id/textView2"
-        android:textColor="#ffffff"
-        android:textSize="25dp"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/switch1"
-        android:layout_alignLeft="@+id/switch1"
-        android:layout_alignStart="@+id/switch1" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Submit"
-        android:id="@+id/button"
-        android:layout_gravity="right|center"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp" />
-
-    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/radioGroup"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignStart="@+id/textView2">
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Bra"
-            android:id="@+id/radioButton"
-            android:layout_below="@+id/textView2"
-            android:layout_alignLeft="@+id/textView2"
-            android:checked="false" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Okej"
-            android:id="@+id/radioButton2"
-            android:layout_below="@+id/radioButton"
-            android:layout_alignLeft="@+id/radioButton"
-            android:layout_alignStart="@+id/radioButton"
-            android:checked="false" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Inte så bra"
-            android:id="@+id/radioButton3"
-            android:layout_below="@+id/radioButton2"
-            android:layout_alignLeft="@+id/radioButton2"
-            android:layout_alignStart="@+id/radioButton2"
-            android:checked="false" />
-    </RadioGroup>
-</RelativeLayout>
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:id="@+id/graph"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight ="10dp"
+        android:layout_marginTop="77dp"
+        android:layout_alignParentTop="true"/>
+</LinearLayout>
