--- a/SlidingMenuExample/app/src/main/res/layout/fragment1.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment1.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
 
     <LinearLayout
@@ -21,9 +22,10 @@
     </LinearLayout>
 
     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView2" >
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        android:id="@+id/scrollView2"
+        android:layout_weight="0.83">
 
         <LinearLayout
             android:orientation="vertical"
@@ -164,63 +166,70 @@
                 </RadioGroup>
             </RelativeLayout>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="100dp">
-
-                <Button
-                    android:id="@+id/skip_button"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Skip day"
-                    android:textStyle="bold"
-                    android:background="@drawable/mybutton"
-                    android:textColor="#157065"
-                    android:textSize="20dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_toLeftOf="@+id/button"
-                    android:layout_toStartOf="@+id/button"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp" />
-
-                <Button
-                    android:id="@+id/button"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Submit"
-                    android:textStyle="bold"
-                    android:background="@drawable/mybutton"
-                    android:textColor="#157065"
-                    android:textSize="20dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp" />
-
-                <Button
-                    android:id="@+id/add_button"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Add variable"
-                    android:textStyle="bold"
-                    android:background="@drawable/mybutton"
-                    android:textColor="#157065"
-                    android:textSize="15dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_toRightOf="@+id/button"
-                    android:layout_toEndOf="@+id/button"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp" />
-            </RelativeLayout>
-
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.05">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp">
+
+            <Button
+                android:id="@+id/skip_button"
+                style="?android:textAppearanceSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Skip day"
+                android:textStyle="bold"
+                android:background="@drawable/mybutton"
+                android:textColor="#157065"
+                android:textSize="20dp"
+                android:layout_alignParentTop="true"
+                android:layout_toLeftOf="@+id/button"
+                android:layout_toStartOf="@+id/button"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp" />
+
+            <Button
+                android:id="@+id/button"
+                style="?android:textAppearanceSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Submit"
+                android:textStyle="bold"
+                android:background="@drawable/mybutton"
+                android:textColor="#157065"
+                android:textSize="20dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp" />
+
+            <Button
+                android:id="@+id/add_button"
+                style="?android:textAppearanceSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add variable"
+                android:textStyle="bold"
+                android:background="@drawable/mybutton"
+                android:textColor="#157065"
+                android:textSize="15dp"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/button"
+                android:layout_toEndOf="@+id/button"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp" />
+        </RelativeLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
