--- a/SlidingMenuExample/app/src/main/res/layout/fragment1.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment1.xml
@@ -57,6 +57,8 @@
                     android:layout_width="200dp"
                     android:layout_height="50dp"
                     android:id="@+id/numberPicker"
+                    android:textColor = "#ffffff"
+                    android:textSize ="22sp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
