--- a/SlidingMenuExample/app/src/main/res/layout/fragment1.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment1.xml
@@ -192,14 +192,14 @@
                 android:background="@drawable/mybutton"
                 android:textColor="#157065"
                 android:textSize="20dp"
-                android:layout_alignParentTop="true"
-                android:layout_toLeftOf="@+id/button"
-                android:layout_toStartOf="@+id/button"
                 android:paddingLeft="5dp"
-                android:paddingRight="5dp" />
+                android:paddingRight="5dp"
+                android:layout_alignParentTop="true"
+                android:layout_toLeftOf="@+id/submit_button"
+                android:layout_toStartOf="@+id/submit_button" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/submit_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -225,11 +225,11 @@
                 android:background="@drawable/mybutton"
                 android:textColor="#157065"
                 android:textSize="15dp"
-                android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/button"
-                android:layout_toEndOf="@+id/button"
                 android:paddingLeft="5dp"
-                android:paddingRight="5dp" />
+                android:paddingRight="5dp"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/submit_button"
+                android:layout_toEndOf="@+id/submit_button" />
         </RelativeLayout>
     </LinearLayout>
 
