--- a/SlidingMenuExample/app/src/main/res/layout/add_member.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/add_member.xml
@@ -12,7 +12,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add member to group XXX"
+            android:text="Add member"
             android:textSize="30sp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="20dp"
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_weight="0.27">
+            android:layout_weight="0.15">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -48,15 +48,36 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:id="@+id/add_variable"
+                android:id="@+id/search_user"
                 android:hint="Enter name here"
                 android:textSize="20dp"
+                android:textColor="#ffffff"
                 android:textColorHint="#ffffff"
                 android:backgroundTint="@android:color/white"
                 android:layout_gravity="center_horizontal|right"
-                android:layout_centerVertical="true"
+                android:maxLength="15"
+                android:layout_below="@+id/textView12"
                 android:layout_toRightOf="@+id/textView12"
-                android:layout_toEndOf="@+id/textView12" />
+                android:layout_toEndOf="@+id/textView12"
+                android:layout_marginTop="20dp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add user"
+                android:id="@+id/button3"
+                android:padding="15dp"
+                android:textSize="15dp"
+                android:textColor="#167165"
+                android:background="@drawable/mybutton"
+                android:onClick="onButtonClick"
+                android:layout_weight="0"
+                android:layout_gravity="right"
+                android:layout_below="@+id/search_user"
+                android:layout_alignLeft="@+id/search_user"
+                android:layout_alignStart="@+id/search_user"
+                android:layout_marginTop="30dp" />
+
         </RelativeLayout>
 
         <RelativeLayout
@@ -66,21 +87,6 @@
             android:layout_weight="1"
             android:layout_marginTop="15dp">
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Add member"
-                android:id="@+id/button3"
-                android:padding="15dp"
-                android:textSize="20sp"
-                android:textColor="#167165"
-                android:background="@drawable/mybutton"
-                android:onClick="onButtonClick"
-                android:layout_marginBottom="50sp"
-                android:layout_weight="0"
-                android:layout_gravity="bottom|center"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true" />
         </RelativeLayout>
 
     </LinearLayout>
